syntax = "proto3";

// Create And Store My Did
message CreateAndStoreMyDidRequest{
	int64 WalletHandle = 1;
	CreateAndStoreMyDidJsonMessage DidJson = 2;
}
message CreateAndStoreMyDidJsonMessage{
	string Did = 1;
	string Seed = 2;
	string CryptoType = 3;
	bool Cid = 4;
}
message CreateAndStoreMyDidResponse{
	string Did = 1;
	string Verkey = 2;
}


// Replace Keys Start
message ReplaceKeysStartRequest{
	int64 WalletHandle = 1;
	string Did = 2;
	ReplaceKeysStartIdentityJsonMessage IdentityJson = 3;
}
message ReplaceKeysStartIdentityJsonMessage{
	string Seed = 1;
	string CryptoType = 2;
}
message ReplaceKeysStartResponse{
	string Verkey = 1;
}


// Replace Keys Apply
message ReplaceKeysApplyRequest{
	int64 WalletHandle = 1;
	string Did = 2;
}
message ReplaceKeysApplyResponse{
	int64 ErrorCode = 1;
}

// Store Their Did
message StoreTheirDidRequest{
	int64 WalletHandle = 1;
	StoreTheirDidIdentityJsonMessage IdentityJson = 2;
}
message StoreTheirDidIdentityJsonMessage{
	string Did = 1;
	string Verkey = 2;
	string CryptoType = 3;
}
message StoreTheirDidResponse{
	int64 ErrorCode = 1;
}


// Create Key
message DidCreateKeyRequest{
	int64 WalletHandle = 1;
	string KeyJson = 2;
}
message DidCreateKeyResponse{
	string Verkey = 1;
}


// Set Key Metadata
message DidSetKeyMetadataRequest{
	int64 WalletHandle = 1;
	string Verkey = 2;
	string Metadata = 3;
}
message DidSetKeyMetadataResponse{
	int64 ErrorCode = 1;
}

// Get Key Metadata
message DidGetKeyMetadataRequest{
	int64 WalletHandle = 1;
	string Verkey = 2;
}
message DidGetKeyMetadataResponse{
	string Metadata = 1;
}


// Key For Did
message KeyForDidRequest{
	int64 PoolHandle = 1;
	int64 WalletHandle = 2;
	string Did = 3;
}
message KeyForDidResponse{
	string Key = 1;
}


// Key For Local Did
message KeyForLocalDidRequest{
	int64 WalletHandle = 1;
	string Did = 2;
}
message KeyForLocalDidResponse{
	string Key = 1;
}


// Set Endpoint For Did
message SetEndpointForDidRequest{
	int64 WalletHandle = 1;
	string Did = 2;
	string Address = 3;
	string TransportKey = 4;
}
message SetEndpointForDidResponse{
	int64 ErrorCode = 1;
}


// Get Endpoint For Did
message GetEndpointForDidRequest{
	int64 WalletHandle = 1;
	int64 PoolHandle = 2;
	string Did = 3;
}
message GetEndpointForDidResponse{
	string Endpoint = 1;
	string TransportVk = 2;
}


// Set Did Metadata
message SetDidMetadataRequest{
	int64 WalletHandle = 1;
	string Did = 2;
	string Metadata = 3;
}
message SetDidMetadataResponse{
	int64 Error = 1;
}


// Get Did Metadata
message GetDidMetadataRequest{
	int64 WalletHandle = 1;
	string Did = 2;
}
message GetDidMetadataResponse{
	string Metadata = 1;
}


// Get My Did With Meta
message GetMyDidWithMetaRequest{
	int64 WalletHandle = 1;
	string Did = 2;
}
message GetMyDidWithMetaResponse{
	string Did = 1;
}


// List My Dids With Meta
message ListMyDidsWithMetaRequest{
	int64 WalletHandle = 1;
}
message ListMyDidsWithMetaResponse{
	repeated string Did = 1;
}


// Abbreviate Verkey
message AbbreviateVerkeyRequest{
	string Did = 1;
	string FullVerkey = 2;
}
message AbbreviateVerkeyResponse{
	string Metadata = 1;
}
