syntax = "proto3";

// Is Pairwise Exists
message IsPairwiseExistsRequest{
	int64 WalletHandle = 1;
	string TheirDid = 2;
}
message IsPairwiseExistsResponse{
	bool Res = 1;
}

// Create Pairwise
message CreatePairwiseRequest{
	int64 WalletHandle = 1;
	string TheirDid = 2;
	string MyDid = 3;
	string Metadata = 4;
}
message CreatePairwiseResponse{
	int64 ErrorCode = 1;
}

// List Pairwise
message ListPairwiseRequest{
	int64 WalletHandle = 1;
}
message ListPairwiseResponse{
	repeated string PairwiseList = 1;
}

// Get Pairwise
message GetPairwiseRequest{
	int64 WalletHandle = 1;
	string TheirDid = 2;
}
message GetPairwiseResponse{
	string PairwiseInfoJson = 1;
}

// Set Pairwise Metadata
message SetPairwiseMetadataRequest{
	int64 WalletHandle = 1;
	string TheirDid = 2;
	string MetaData = 3;
}
message SetPairwiseMetadataResponse{
	int64 ErrorCode = 1;
}